[package]
name = "surely-you-jest"
version = "0.1.0"
description = "Rust base TUI tool to help you run your jest tests!"
authors = ["Clinton Medbery <clintonmedbery@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
regex = "1.11.1"
glob = "0.3.2"
